# fastapi-tdd-docker

./: .gitignore  docker-compose.yml  readme.md
.github/workflows/: main.yml
app/: config.py  main.py
project/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
project/app/: config.py  main.py  summarizer.py
project/app/api/: crud.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/migrations/models/: 0_20211205141526_init.sql
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
