[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = "testdriven.io tut"
authors = ["James"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
asyncpg = "^0.25.0"
tortoise-orm = "^0.17.8"
aerich = "^0.5.8"
requests = "^2.26.0"
gunicorn = "^20.1.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
